tests/rename/should_compile/T7145a.hs
module T7145a ( Applicative(pure) ) where

