tests/rename/should_fail/T14907a.hs
module T14907a where

class (Bool, a, b)
